ForespørselDtoMapper med flere test og builder.