@@ -165,8 +165,8 @@ class InntektsmeldingDtoMapperTest {
             .map(InntektsmeldingDtoMapper::mapRefusjonsendring)
             .toList();
         assertThat(refusjoner).hasSize(2);
-        assertThat(refusjoner.get(0).fom()).isEqualTo(START_DATO.plusMonths(1));
-        assertThat(refusjoner.get(0).beløp()).isEqualByComparingTo(new BigDecimal("35000.00"));
+        assertThat(refusjoner.getFirst().fom()).isEqualTo(START_DATO.plusMonths(1));
+        assertThat(refusjoner.getFirst().beløp()).isEqualByComparingTo(new BigDecimal("35000.00"));
         assertThat(refusjoner.get(1).fom()).isEqualTo(START_DATO.plusMonths(2));
         assertThat(refusjoner.get(1).beløp()).isEqualByComparingTo(new BigDecimal("30000.00"));
 
@@ -183,8 +183,8 @@ class InntektsmeldingDtoMapperTest {
             .map(InntektsmeldingDtoMapper::mapEndringsårsak)
             .toList();
         assertThat(endringsårsaker).hasSize(2);
-        assertThat(endringsårsaker.get(0).årsak()).isEqualTo(Endringsårsak.FERIE);
-        assertThat(endringsårsaker.get(0).fom()).isEqualTo(START_DATO);
+        assertThat(endringsårsaker.getFirst().årsak()).isEqualTo(Endringsårsak.FERIE);
+        assertThat(endringsårsaker.getFirst().fom()).isEqualTo(START_DATO);
         assertThat(endringsårsaker.get(1).årsak()).isEqualTo(Endringsårsak.BONUS);
         assertThat(endringsårsaker.get(1).fom()).isNull();
     }
@@ -326,6 +326,222 @@ class InntektsmeldingDtoMapperTest {
         assertThat(dto.getSøkteRefusjonsperioder()).isNull();
         assertThat(dto.getBortfaltNaturalytelsePerioder()).isNull();
         assertThat(dto.getEndringAvInntektÅrsaker()).isNull();
+    }
+
+    @Test
+    void skal_mappe_komplett_entitet_til_dto_via_mapFraEntitet() {
+        var opprettetTidspunkt = LocalDateTime.of(2026, 3, 10, 9, 0, 0);
+
+        var entitet = lagBasisInntektsmeldingEntitet()
+            .medKontaktperson(new KontaktpersonEntitet("Kari Nordmann", "87654321"))
+            .medMånedRefusjon(new BigDecimal("40000.00"))
+            .medRefusjonOpphørsdato(START_DATO.plusMonths(6))
+            .medOpprettetAv("saksbehandler")
+            .medRefusjonsendringer(List.of(
+                new RefusjonsendringEntitet(START_DATO.plusMonths(1), new BigDecimal("35000.00"))))
+            .medBortfaltNaturalytelser(List.of(
+                BortaltNaturalytelseEntitet.builder()
+                    .medPeriode(START_DATO, START_DATO.plusMonths(1))
+                    .medType(NaturalytelseType.BIL)
+                    .medMånedBeløp(new BigDecimal("3000.00"))
+                    .build()))
+            .medEndringsårsaker(List.of(
+                EndringsårsakEntitet.builder().medÅrsak(Endringsårsak.FERIE).medFom(START_DATO).medTom(START_DATO.plusWeeks(2)).build()))
+            .medOpprettetTidspunkt(opprettetTidspunkt)
+            .build();
+
+        var dto = InntektsmeldingDtoMapper.mapFraEntitet(entitet);
+
+        assertThat(dto.getAktørId().getAktørId()).isEqualTo(AKTØR_ID);
+        assertThat(dto.getYtelse()).isEqualTo(Ytelsetype.FORELDREPENGER);
+        assertThat(dto.getArbeidsgiver().orgnr()).isEqualTo(ARBEIDSGIVER_IDENT);
+        assertThat(dto.getStartdato()).isEqualTo(START_DATO);
+        assertThat(dto.getMånedInntekt()).isEqualByComparingTo(MÅNED_INNTEKT);
+        assertThat(dto.getMånedRefusjon()).isEqualByComparingTo(new BigDecimal("40000.00"));
+        assertThat(dto.getOpphørsdatoRefusjon()).isEqualTo(START_DATO.plusMonths(6));
+        assertThat(dto.getOpprettetAv()).isEqualTo("saksbehandler");
+        assertThat(dto.getKildesystem()).isEqualTo(Kildesystem.ARBEIDSGIVERPORTAL);
+        assertThat(dto.getInnsendtTidspunkt()).isEqualTo(opprettetTidspunkt);
+        assertThat(dto.getInntektsmeldingUuid()).isNotNull();
+        assertThat(dto.getKontaktperson().navn()).isEqualTo("Kari Nordmann");
+        assertThat(dto.getKontaktperson().telefonnummer()).isEqualTo("87654321");
+        assertThat(dto.getSøkteRefusjonsperioder()).hasSize(1);
+        assertThat(dto.getSøkteRefusjonsperioder().getFirst().fom()).isEqualTo(START_DATO.plusMonths(1));
+        assertThat(dto.getBortfaltNaturalytelsePerioder()).hasSize(1);
+        assertThat(dto.getBortfaltNaturalytelsePerioder().getFirst().naturalytelsetype()).isEqualTo(NaturalytelseType.BIL);
+        assertThat(dto.getEndringAvInntektÅrsaker()).hasSize(1);
+        assertThat(dto.getEndringAvInntektÅrsaker().getFirst().årsak()).isEqualTo(Endringsårsak.FERIE);
+    }
+
+    @Test
+    void skal_mappe_entitet_uten_valgfrie_felter_via_mapFraEntitet() {
+        var entitet = lagBasisInntektsmeldingEntitet().build();
+
+        var dto = InntektsmeldingDtoMapper.mapFraEntitet(entitet);
+
+        assertThat(dto.getKontaktperson()).isNull();
+        assertThat(dto.getMånedRefusjon()).isNull();
+        assertThat(dto.getOpphørsdatoRefusjon()).isNull();
+        assertThat(dto.getSøkteRefusjonsperioder()).isEmpty();
+        assertThat(dto.getBortfaltNaturalytelsePerioder()).isEmpty();
+        assertThat(dto.getEndringAvInntektÅrsaker()).isEmpty();
+    }
+
+    @Test
+    void skal_mappe_dto_til_entitet_via_mapTilEntitet() {
+        var aktørId = new no.nav.foreldrepenger.inntektsmelding.integrasjoner.person.AktørId(AKTØR_ID);
+        var dto = InntektsmeldingDto.builder()
+            .medAktørId(aktørId)
+            .medYtelse(Ytelsetype.SVANGERSKAPSPENGER)
+            .medArbeidsgiver(new Arbeidsgiver(ARBEIDSGIVER_IDENT))
+            .medKontaktperson(new InntektsmeldingDto.Kontaktperson("99887766", "Per Hansen"))
+            .medStartdato(START_DATO)
+            .medInntekt(new BigDecimal("55000"))
+            .medMånedRefusjon(new BigDecimal("25000"))
+            .medOpphørsdatoRefusjon(START_DATO.plusMonths(6))
+            .medOpprettetAv("bruker")
+            .medKildesystem(Kildesystem.API)
+            .medSøkteRefusjonsperioder(List.of(
+                new InntektsmeldingDto.SøktRefusjon(START_DATO.plusMonths(2), new BigDecimal("20000"))))
+            .medBortfaltNaturalytelsePerioder(List.of(
+                new InntektsmeldingDto.BortfaltNaturalytelse(START_DATO, START_DATO.plusMonths(3), NaturalytelseType.LOSJI, new BigDecimal("2000"))))
+            .medEndringAvInntektÅrsaker(List.of(
+                new InntektsmeldingDto.Endringsårsaker(Endringsårsak.VARIG_LØNNSENDRING, START_DATO.minusMonths(1), null, START_DATO.minusWeeks(2))))
+            .build();
+
+        var entitet = InntektsmeldingDtoMapper.mapTilEntitet(dto);
+
+        assertThat(entitet.getAktørId().getAktørId()).isEqualTo(AKTØR_ID);
+        assertThat(entitet.getYtelsetype()).isEqualTo(Ytelsetype.SVANGERSKAPSPENGER);
+        assertThat(entitet.getArbeidsgiverIdent()).isEqualTo(ARBEIDSGIVER_IDENT);
+        assertThat(entitet.getStartDato()).isEqualTo(START_DATO);
+        assertThat(entitet.getMånedInntekt()).isEqualByComparingTo(new BigDecimal("55000"));
+        assertThat(entitet.getMånedRefusjon()).isEqualByComparingTo(new BigDecimal("25000"));
+        assertThat(entitet.getOpphørsdatoRefusjon()).isEqualTo(START_DATO.plusMonths(6));
+        assertThat(entitet.getOpprettetAv()).isEqualTo("bruker");
+        assertThat(entitet.getKildesystem()).isEqualTo(Kildesystem.API);
+        assertThat(entitet.getKontaktperson().getNavn()).isEqualTo("Per Hansen");
+        assertThat(entitet.getKontaktperson().getTelefonnummer()).isEqualTo("99887766");
+        assertThat(entitet.getRefusjonsendringer()).hasSize(1);
+        assertThat(entitet.getBorfalteNaturalYtelser()).hasSize(1);
+        assertThat(entitet.getEndringsårsaker()).hasSize(1);
+    }
+
+    @Test
+    void skal_filtrere_bort_refusjonsendring_på_startdato_ved_mapping_til_entitet() {
+        var aktørId = new no.nav.foreldrepenger.inntektsmelding.integrasjoner.person.AktørId(AKTØR_ID);
+        var opphørsdato = START_DATO.plusMonths(6);
+        var dto = InntektsmeldingDto.builder()
+            .medAktørId(aktørId)
+            .medYtelse(Ytelsetype.FORELDREPENGER)
+            .medArbeidsgiver(new Arbeidsgiver(ARBEIDSGIVER_IDENT))
+            .medKontaktperson(new InntektsmeldingDto.Kontaktperson("12345678", "Test"))
+            .medStartdato(START_DATO)
+            .medInntekt(MÅNED_INNTEKT)
+            .medMånedRefusjon(new BigDecimal("30000"))
+            .medOpphørsdatoRefusjon(opphørsdato)
+            .medKildesystem(Kildesystem.ARBEIDSGIVERPORTAL)
+            .medSøkteRefusjonsperioder(List.of(
+                new InntektsmeldingDto.SøktRefusjon(START_DATO, new BigDecimal("30000")),                   // filtreres bort (startdato)
+                new InntektsmeldingDto.SøktRefusjon(opphørsdato.plusDays(1), BigDecimal.ZERO),               // filtreres bort (opphørsdato + 1)
+                new InntektsmeldingDto.SøktRefusjon(START_DATO.plusMonths(2), new BigDecimal("20000"))))     // beholdes
+            .medBortfaltNaturalytelsePerioder(List.of())
+            .medEndringAvInntektÅrsaker(List.of())
+            .build();
+
+        var entitet = InntektsmeldingDtoMapper.mapTilEntitet(dto);
+
+        assertThat(entitet.getRefusjonsendringer()).hasSize(1);
+        assertThat(entitet.getRefusjonsendringer().getFirst().getFom()).isEqualTo(START_DATO.plusMonths(2));
+        assertThat(entitet.getRefusjonsendringer().getFirst().getRefusjonPrMnd()).isEqualByComparingTo(new BigDecimal("20000"));
+    }
+
+    @Test
+    void skal_roundtrippe_grunnleggende_felter_via_dto_til_entitet_til_dto() {
+        var aktørId = new no.nav.foreldrepenger.inntektsmelding.integrasjoner.person.AktørId(AKTØR_ID);
+        var original = InntektsmeldingDto.builder()
+            .medAktørId(aktørId)
+            .medYtelse(Ytelsetype.SVANGERSKAPSPENGER)
+            .medArbeidsgiver(new Arbeidsgiver(ARBEIDSGIVER_IDENT))
+            .medKontaktperson(new InntektsmeldingDto.Kontaktperson("11112222", "Kari Nordmann"))
+            .medStartdato(START_DATO)
+            .medInntekt(new BigDecimal("60000"))
+            .medOpprettetAv("bruker")
+            .medKildesystem(Kildesystem.ARBEIDSGIVERPORTAL)
+            .medSøkteRefusjonsperioder(List.of())
+            .medBortfaltNaturalytelsePerioder(List.of())
+            .medEndringAvInntektÅrsaker(List.of())
+            .build();
+
+        var entitet = InntektsmeldingDtoMapper.mapTilEntitet(original);
+        var roundtripped = InntektsmeldingDtoMapper.mapFraEntitet(entitet);
+
+        assertThat(roundtripped.getAktørId()).isEqualTo(original.getAktørId());
+        assertThat(roundtripped.getYtelse()).isEqualTo(original.getYtelse());
+        assertThat(roundtripped.getArbeidsgiver()).isEqualTo(original.getArbeidsgiver());
+        assertThat(roundtripped.getStartdato()).isEqualTo(original.getStartdato());
+        assertThat(roundtripped.getMånedInntekt()).isEqualByComparingTo(original.getMånedInntekt());
+        assertThat(roundtripped.getKildesystem()).isEqualTo(original.getKildesystem());
+        assertThat(roundtripped.getOpprettetAv()).isEqualTo(original.getOpprettetAv());
+        assertThat(roundtripped.getKontaktperson().navn()).isEqualTo(original.getKontaktperson().navn());
+        assertThat(roundtripped.getKontaktperson().telefonnummer()).isEqualTo(original.getKontaktperson().telefonnummer());
+    }
+
+    @Test
+    void skal_roundtrippe_endringsårsaker() {
+        var aktørId = new no.nav.foreldrepenger.inntektsmelding.integrasjoner.person.AktørId(AKTØR_ID);
+        var original = InntektsmeldingDto.builder()
+            .medAktørId(aktørId)
+            .medYtelse(Ytelsetype.FORELDREPENGER)
+            .medArbeidsgiver(new Arbeidsgiver(ARBEIDSGIVER_IDENT))
+            .medKontaktperson(new InntektsmeldingDto.Kontaktperson("12345678", "Test"))
+            .medStartdato(START_DATO)
+            .medInntekt(MÅNED_INNTEKT)
+            .medKildesystem(Kildesystem.ARBEIDSGIVERPORTAL)
+            .medSøkteRefusjonsperioder(List.of())
+            .medBortfaltNaturalytelsePerioder(List.of())
+            .medEndringAvInntektÅrsaker(List.of(
+                new InntektsmeldingDto.Endringsårsaker(Endringsårsak.TARIFFENDRING, START_DATO, START_DATO.plusMonths(1), START_DATO.minusDays(5)),
+                new InntektsmeldingDto.Endringsårsaker(Endringsårsak.BONUS, null, null, null)))
+            .build();
+
+        var entitet = InntektsmeldingDtoMapper.mapTilEntitet(original);
+        var roundtripped = InntektsmeldingDtoMapper.mapFraEntitet(entitet);
+
+        assertThat(roundtripped.getEndringAvInntektÅrsaker()).hasSize(2);
+        assertThat(roundtripped.getEndringAvInntektÅrsaker().getFirst().årsak()).isEqualTo(Endringsårsak.TARIFFENDRING);
+        assertThat(roundtripped.getEndringAvInntektÅrsaker().getFirst().fom()).isEqualTo(START_DATO);
+        assertThat(roundtripped.getEndringAvInntektÅrsaker().getFirst().tom()).isEqualTo(START_DATO.plusMonths(1));
+        assertThat(roundtripped.getEndringAvInntektÅrsaker().getFirst().bleKjentFom()).isEqualTo(START_DATO.minusDays(5));
+        assertThat(roundtripped.getEndringAvInntektÅrsaker().get(1).årsak()).isEqualTo(Endringsårsak.BONUS);
+        assertThat(roundtripped.getEndringAvInntektÅrsaker().get(1).fom()).isNull();
+    }
+
+    @Test
+    void skal_roundtrippe_bortfalt_naturalytelse() {
+        var aktørId = new no.nav.foreldrepenger.inntektsmelding.integrasjoner.person.AktørId(AKTØR_ID);
+        var original = InntektsmeldingDto.builder()
+            .medAktørId(aktørId)
+            .medYtelse(Ytelsetype.FORELDREPENGER)
+            .medArbeidsgiver(new Arbeidsgiver(ARBEIDSGIVER_IDENT))
+            .medKontaktperson(new InntektsmeldingDto.Kontaktperson("12345678", "Test"))
+            .medStartdato(START_DATO)
+            .medInntekt(MÅNED_INNTEKT)
+            .medKildesystem(Kildesystem.ARBEIDSGIVERPORTAL)
+            .medSøkteRefusjonsperioder(List.of())
+            .medBortfaltNaturalytelsePerioder(List.of(
+                new InntektsmeldingDto.BortfaltNaturalytelse(START_DATO, START_DATO.plusMonths(6), NaturalytelseType.ELEKTRISK_KOMMUNIKASJON, new BigDecimal("500")),
+                new InntektsmeldingDto.BortfaltNaturalytelse(START_DATO, START_DATO.plusMonths(3), NaturalytelseType.LOSJI, new BigDecimal("2000"))))
+            .medEndringAvInntektÅrsaker(List.of())
+            .build();
+
+        var entitet = InntektsmeldingDtoMapper.mapTilEntitet(original);
+        var roundtripped = InntektsmeldingDtoMapper.mapFraEntitet(entitet);
+
+        assertThat(roundtripped.getBortfaltNaturalytelsePerioder()).hasSize(2);
+        assertThat(roundtripped.getBortfaltNaturalytelsePerioder().getFirst().naturalytelsetype()).isEqualTo(NaturalytelseType.ELEKTRISK_KOMMUNIKASJON);
+        assertThat(roundtripped.getBortfaltNaturalytelsePerioder().getFirst().beløp()).isEqualByComparingTo(new BigDecimal("500"));
+        assertThat(roundtripped.getBortfaltNaturalytelsePerioder().get(1).naturalytelsetype()).isEqualTo(NaturalytelseType.LOSJI);
     }
 
     private InntektsmeldingEntitet.Builder lagBasisInntektsmeldingEntitet() {
